Fix overflowing display
and fix bug with restarting num2 after result

--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ body{
     margin-right: 90px;
     padding-top: 40px;
     color: rgb(255, 255, 255);
+    max-width: 7ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .buttons{
